[package]
name = "toss"
version = "2.2.2"
edition = "2024"
authors = [ "scientiac < iac@scientiac.space >" ]
description = "A throw-catch style move and copy program."
readme = "README.md"
repository = "https://github.com/scientiac/toss"
homepage = "https://github.com/scientiac/toss.git"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }

[[bin]]
name = "toss"
path = "src/main.rs"
